--- a/games/Everyday/Credits.html
+++ b/games/Everyday/Credits.html
@@ -1,7 +1,26 @@
 <font color='#ff7d00'>ÜBERSETZUNG</font>
 Maximilian Frank
 
+<font color='#ff7d00'>DEUTSCHE STIMME</font>
+Kai Schallenberg
+
+<font color='#ff7d00'>SYNCHRONREGIE</font>
+Erizzle
+
+<font color='#ff7d00'>LYRICS CREDITS SONG</font>
+Just a Yoshi
+
+<font color='#ff7d00'>CREDITS- UND INTROSONG</font>
+Bernhard Wangler
+Klara Wangler
+
+<font color='#ff7d00'>GRAFIKEN</font>
+Maximilian Frank
+Fukken Hanzel
+Marvj13
+
 <font color='#ff7d00'>WEB-ENTWICKLUNG</font>
+TheDarkSid3r
 Erizzle
 
 <font color='#ff7d00'>MEGA PATREON SUPPORTER</font>
