--- a/games/JackboxTalks/Credits.html
+++ b/games/JackboxTalks/Credits.html
@@ -10,6 +10,7 @@
 <font size='22'>ERIZZLE</font>
 
 <font color='#16DAB7' size='16'>WEB-ENTWICKLUNG</font>
+<font size='22'>THEDARKSID3R</font>
 <font size='22'>ERIZZLE</font>
 
 <font color='#16DAB7' size='16'>MEGA PATREON SUPPORTER</font>
