--- a/games/Quiplash3/Credits_en.html
+++ b/games/Quiplash3/Credits_en.html
@@ -1,6 +1,7 @@
 <font color="#8857af">QUIPLASH 3</font>
 
 <font color="#8857af">WEB-ENTWICKLUNG</font>
+TheDarkSid3r
 Erizzle
 
 <font color="#8857af">MEGA PATREON SUPPORTER</font>
