--- a/games/WorldChampions/Credits.html
+++ b/games/WorldChampions/Credits.html
@@ -15,6 +15,7 @@ Erizzle
 Linus Schneider - Trembling Sky
 
 <font color='#ffffff'>WEB-ENTWICKLUNG</font>
+TheDarkSid3r
 Erizzle
 
 <font color='#ffffff'>MEGA PATREON SUPPORTER</font>
