--- a/games/JackboxTalks/Credits.html
+++ b/games/JackboxTalks/Credits.html
@@ -9,6 +9,9 @@
 <font color='#16DAB7' size='16'>SYNCHRONREGIE</font>
 <font size='22'>ERIZZLE</font>
 
+<font color='#16DAB7' size='16'>QUALITÄTSSICHERUNG</font>
+<font size='22'>BLACKSHEEP</font>
+
 <font color='#16DAB7' size='16'>WEB-ENTWICKLUNG</font>
 <font size='22'>THEDARKSID3R</font>
 <font size='22'>ERIZZLE</font>
