Anpassung Luftballon "Die Teufel im Detail"

--- a/games/Everyday/Credits.html
+++ b/games/Everyday/Credits.html
@@ -17,8 +17,9 @@ Klara Wangler
 
 <font color='#ff7d00'>GRAFIKEN</font>
 Maximilian Frank
-Fukken Hanzel
 Marvj13
+Fukken Hanzel
+AndrewOxton
 
 <font color='#ff7d00'>WEB-ENTWICKLUNG</font>
 TheDarkSid3r
