--- a/games/Everyday/Credits.html
+++ b/games/Everyday/Credits.html
@@ -8,17 +8,16 @@ Kai Schallenberg
 Kai Schallenberg
 Erizzle
 
-<font color='#ff7d00'>LYRICS CREDITS SONG</font>
+<font color='#ff7d00'>LYRICS CREDITS- UND INTROSONG</font>
 Just a Yoshi
 
-<font color='#ff7d00'>CREDITS- UND INTROSONG</font>
+<font color='#ff7d00'>VOCALS CREDITS- UND INTROSONG</font>
 Bernhard Wangler
 Klara Wangler
 
 <font color='#ff7d00'>GRAFIKEN</font>
 Maximilian Frank
-Marvj13
-Fukken Hanzel
+Marvin (Marvj13)
 AndrewOxton
 
 <font color='#ff7d00'>WEB-ENTWICKLUNG</font>
