Anpassung Untertitel und Credits Blather 'Round

--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -1,22 +1,28 @@
-<font color='#ff7d00'>SIE ÜBERSETZEN DAS SPIEL</font>
+<font color='#ff7d00'>SIE ÜBERSETZTEN DAS SPIEL</font>
 Paul Hufnagel
 ItsNiceCraft
+Erizzle
+Maximilian Frank
+BlackSheep
 DJJayT
 JohnyBCoon
 Chatan
-Erizzle
-Forseti
-BlackSheep
 
 <font color='#ff7d00'>OH! DIE DEUTSCHE STIMME</font>
 TBA
 
-<font color='#ff7d00'>ER FÜHRT SYNCHRONREGIE</font>
+<font color='#ff7d00'>ER FÜHRTE SYNCHRONREGIE</font>
 Erizzle
 
 <font color='#ff7d00'>SIE MACHTEN DIE WEBSEITE</font>
 TheDarkSid3r
 Erizzle
+
+<font color='#ff7d00'>WOW! DIE DEUTSCHE SÄNGERIN</font>
+Vanessa Strauch
+
+<font color='#ff7d00'>ER SCHRIEB DEN CREDIT SONG</font>
+Maximilian Frank
 
 
 <font color='#ff7d00'>JACKBOX GAMES</font>
