--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -1,15 +1,13 @@
 <font color='#ff7d00'>SIE ÜBERSETZTEN DAS SPIEL</font>
-Paul Hufnagel
-ItsNiceCraft
-Erizzle
 Maximilian Frank
+Erizzle
 BlackSheep
-DJJayT
-JohnyBCoon
+Paul Hufnagel
 Chatan
+ItsNiceCraft
 
 <font color='#ff7d00'>OH! DIE DEUTSCHE STIMME</font>
-TBA
+Susanna Cuda
 
 <font color='#ff7d00'>ER FÜHRTE SYNCHRONREGIE</font>
 Erizzle
@@ -21,7 +19,7 @@ Erizzle
 <font color='#ff7d00'>WOW! DIE DEUTSCHE SÄNGERIN</font>
 Vanessa Strauch
 
-<font color='#ff7d00'>ER SCHRIEB DEN CREDIT SONG</font>
+<font color='#ff7d00'>ER SCHRIEB DEN CREDITS SONG</font>
 Maximilian Frank
 
 
