--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -25,136 +25,136 @@ Maximilian Frank
 
 <font color='#ff7d00'>JACKBOX GAMES</font>
 
-<font color='#ff7d00'>THEY DIRECT THE GAME</font>
+<font color='#ff7d00'>ER LEITET DAS SPIEL</font>
 Mark Turowetz
 
-<font color='#ff7d00'>THEY PRODUCE THE GAME</font>
+<font color='#ff7d00'>ER PRODUZIERT DAS SPIEL</font>
 Alex Weick
 
-<font color='#ff7d00'>OH, LEAD EDITORIAL!</font>
+<font color='#ff7d00'>OH, LEITENDER REDAKTEUR!</font>
 Claire McFadden
 
-<font color='#ff7d00'>THEY ARE THE LEAD GAMEPLAY ENGINEERS</font>
+<font color='#ff7d00'>SIE SIND DIE LEITENDEN GAMEPLAY-INGENIEURE</font>
 Ben Jacobs
 Isaac Sweet
 
-<font color='#ff7d00'>OH, LEAD ARTIST!</font>
+<font color='#ff7d00'>OH, LEITENDER KÜNSTLER!</font>
 David Innis
 
-<font color='#ff7d00'>THEY LEAD THE AUDIO</font>
+<font color='#ff7d00'>ER LEITET DAS AUDIO</font>
 Andy Poland
 
-<font color='#ff7d00'>THEY DO THE MUSIC</font>
+<font color='#ff7d00'>SIE MACHEN DIE MUSIK</font>
 Randy Sly
 Andy Poland
 
-<font color='#ff7d00'>THEY ARE THE LEAD JACKBOX.TV ENGINEER</font>
+<font color='#ff7d00'>ER IST DER LEITENDE JACKBOX.TV INGENIEUR</font>
 Ryan McGill
 
-<font color='#ff7d00'>THEY LEAD THE QA</font>
+<font color='#ff7d00'>ER LEITET DIE QUALITÄTSSICHERUNG</font>
 Jack Guffey
 
-<font color='#ff7d00'>THEY HOST THE GAME</font>
+<font color='#ff7d00'>SIE LEITET DAS SPIEL</font>
 Symphony Sanders
 
-<font color='#ff7d00'>SO MANY WRITERS!</font>
+<font color='#ff7d00'>SO VIELE AUTOREN!</font>
 Liz Anderson
 Alex Blechman
 Tom Gottlieb
 CJ Tuor
 
-<font color='#ff7d00'>THEY CONTRIBUTE ADDITIONAL WRITING</font>
+<font color='#ff7d00'>SIE WAREN ZUSÄTZLICHE AUTOREN</font>
 Chelsea Rounsley
 Tim Sniffen
 
-<font color='#ff7d00'>OH, ASSISTANT EDITOR!</font>
+<font color='#ff7d00'>OH, ASSISTENZ-REDAKTEUR!</font>
 Clara Hanford
 
-<font color='#ff7d00'>THEY ORIGINATED THE CONCEPT</font>
+<font color='#ff7d00'>SIE ENTWICKELTE DAS KONZEPT</font>
 Claire McFadden
 
-<font color='#ff7d00'>THEY ARE THE LEAD INFRASTRUCTURE ENGINEER</font>
+<font color='#ff7d00'>ER IST DER LEITER DER INFRASTRUKTURTECHNIK</font>
 Jordan Orelli
 
-<font color='#ff7d00'>SO MUCH INFRASTRUCTURE ENGINEERING!</font>
+<font color='#ff7d00'>SO VIELE INFRASTRUKTURTECHNIKER!</font>
 Dan Fallon
 Lena Guerrero
 Chase McClure
 Ryan McGill
 Alex Swan
 
-<font color='#ff7d00'>THEY PROVIDE ADDITIONAL SOUND DESIGN</font>
+<font color='#ff7d00'>SIE STELLTEN ZUSÄTZLICHES SOUNDDESIGN BEREIT</font>
 Avery Makel
 Brendan Monte
 
-<font color='#ff7d00'>THEY ADMINISTER ADDITIONAL GAMEPLAY ENGINEERING</font>
+<font color='#ff7d00'>OH, ZUSÄTZLICHE GAMEPLAY-ENTWICKLUNG!</font>
 Farhan Noormohammed
 Michael Siciliano
 Pascal Pochol
 Mike Zuba
 
-<font color='#ff7d00'>THEY COME TOGETHER TO MAKE THE CREDITS SONG</font>
+<font color='#ff7d00'>SIE MACHTEN DEN CREDITS-SONG!</font>
 Randy Sly - Music
 Andy Poland - Lyrics
 Channing Lee - Vocals
 channingandquinn.com
 
-<font color='#ff7d00'>THEY MANAGE THE QA TEAM</font>
+<font color='#ff7d00'>ER IST DER MANAGER DER QUALITÄTSSICHERUNG</font>
 Steve Pakal
 
-<font color='#ff7d00'>THEY EXIST AS THE QA TEAM</font>
+<font color='#ff7d00'>WIE QUALITÄTSSICHERND!</font>
 Allison Flom
 Kevin Vekony
 Dutch Freese
 Bennett Hofer
 Alex Lueck
 
-<font color='#ff7d00'>THEY DO THE USER RESEARCH</font>
+<font color='#ff7d00'>SIE MACHEN DIE BENUTZERFORSCHUNG</font>
 Allison Flom
 Kevin Vekony
 
-<font color='#ff7d00'>THEY DO THE SUBMISSION</font>
+<font color='#ff7d00'>OH, EINREICHUNG!</font>
 Luke Cody - Manager
 Laura La Vito
 Alex Weick
 
-<font color='#ff7d00'>THEY ARE THE CEO</font>
+<font color='#ff7d00'>ER IST DER GESCHÄFTSFÜHRER</font>
 Mike Bilder
 
-<font color='#ff7d00'>THEY ARE THE CCO</font>
+<font color='#ff7d00'>ER IST DER INHALTLICHE DIREKTOR</font>
 Allard Laban
 
-<font color='#ff7d00'>THEY ARE THE CTO</font>
+<font color='#ff7d00'>ER IST DER TECHNISCHE DIREKTOR</font>
 Evan Jacover
 
-<font color='#ff7d00'>THEY ARE THE VP OF AUDIO AND EDITORIAL</font>
+<font color='#ff7d00'>ER IST DER VIZEPRÄSIDENT FÜR AUDIO UND BEARBEITUNG</font>
 Andy Poland
 
-<font color='#ff7d00'>THEY ARE THE DIRECTOR OF PRODUCTION</font>
+<font color='#ff7d00'>ER IST DER VIZEPRÄSIDENT DER PRODUKTION</font>
 Mike Zuba
 
-<font color='#ff7d00'>THEY ARE THE STUDIO ART DIRECTOR</font>
+<font color='#ff7d00'>ER IST DER KUNSTLEITER DES STUDIOS</font>
 David Innis
 
-<font color='#ff7d00'>THEY ARE THE STUDIO EDITORIAL DIRECTOR</font>
+<font color='#ff7d00'>ER IST DER REDAKTIONSLEITER DES STUDIOS</font>
 Arnie Niekamp
 
-<font color='#ff7d00'>THEY ARE THE MARKETING DIRECTOR</font>
+<font color='#ff7d00'>SIE IST DIE DIREKTORIN DES MARKETING</font>
 Brooke Hofer
 
-<font color='#ff7d00'>THEY ARE THE MARKETING MANAGER</font>
+<font color='#ff7d00'>SIE IST DIE MARKETINGLEITERIN</font>
 Belia Portillo
 
-<font color='#ff7d00'>THEY ARE THE HR & OFFICE MANAGER</font>
+<font color='#ff7d00'>OH, PERSONAL- UND BÜROLEITER!</font>
 Rob Alletto
 
-<font color='#ff7d00'>THEY PROVIDE THE LEGAL COUNSEL</font>
+<font color='#ff7d00'>ER IST DER RECHTSBEISTAND</font>
 Kurt Hirsch
 
-<font color='#ff7d00'>THEY ARE THE CONTROLLER</font>
+<font color='#ff7d00'>SIE IST DIE RECHNUNGSPRÜFERIN</font>
 Anna Wodynski
 
-<font color='#ff7d00'>THEY ARE RECEIVING SPECIAL THANKS</font>
+<font color='#ff7d00'>SO EIN BESONDERER DANK!</font>
 Shumaila Ahmad
 Warren Arnold
 Brooke Breit
@@ -171,5 +171,5 @@ Bruno Rodríguez
 Melissa Stone
 Owen Watson
 
-<font color='#ff7d00'>THEY FOUNDED JACKBOX GAMES</font>
+<font color='#ff7d00'>ER GRÜNDETE JACKBOX GAMES</font>
 Harry Gottlieb
