--- a/games/Everyday/Credits.html
+++ b/games/Everyday/Credits.html
@@ -28,71 +28,71 @@ Erizzle
 <font color='#ff7d00'>JACKBOX GAMES</font>
 
 
-<font color='#ff7d00'>DIRECTOR</font>
+<font color='#ff7d00'>LEITUNG</font>
 Ryan DiGiorgi
 
-<font color='#ff7d00'>PRODUCER</font>
+<font color='#ff7d00'>PRODUZENT</font>
 Laura La Vito
 
-<font color='#ff7d00'>DESIGN LEAD</font>
+<font color='#ff7d00'>DESIGN-LEITUNG</font>
 Chase McClure
 
-<font color='#ff7d00'>LEAD GAMEPLAY ENGINEER</font>
+<font color='#ff7d00'>LEITENDER GAMEPLAY-INGENIEUR</font>
 Ben Jacobs
 
-<font color='#ff7d00'>LEAD ARTIST</font>
+<font color='#ff7d00'>LEITENDER KÜNSTLER</font>
 Owen Watson
 
-<font color='#ff7d00'>AUDIO LEAD</font>
+<font color='#ff7d00'>AUDIO-LEITUNG</font>
 Brian Chard
 
-<font color='#ff7d00'>LEAD JACKBOX.TV ENGINEER</font>
+<font color='#ff7d00'>LEITENDER JACKBOX.TV INGENIEUR</font>
 Chase McClure
 
-<font color='#ff7d00'>QA LEAD</font>
+<font color='#ff7d00'>LEITUNG DER QUALITÄTSSICHERUNG</font>
 Kevin Vekony
 
-<font color='#ff7d00'>HOST</font>
+<font color='#ff7d00'>MODERATOR</font>
 Tim Sniffen
 
-<font color='#ff7d00'>LEAD EDITORIAL</font>
+<font color='#ff7d00'>LEITENDER REDAKTEUR</font>
 Ryan DiGiorgi
 
-<font color='#ff7d00'>HEAD WRITER</font>
+<font color='#ff7d00'>CHEFREDAKTEUR</font>
 CJ Tuor
 
-<font color='#ff7d00'>WRITERS</font>
+<font color='#ff7d00'>AUTOREN</font>
 Liz Anderson
 Alex Blechman
 Brooke Breit
 Claire McFadden
 
-<font color='#ff7d00'>CONTRIBUTING WRITERS</font>
+<font color='#ff7d00'>ZUSÄTZLICHE AUTOREN</font>
 Brian Chard
 Spencer Ham
 Chase McClure
 Tim Sniffen
 
-<font color='#ff7d00'>ASSISTANT EDITOR</font>
+<font color='#ff7d00'>ASSISTENZ-REDAKTEUR</font>
 Clara Hanford
 
-<font color='#ff7d00'>ORIGINAL&nbsp;&nbsp;CONCEPT</font>
+<font color='#ff7d00'>URSPRÜNGLICHES KONZEPT</font>
 Chase McClure
 
-<font color='#ff7d00'>LEAD INFRASTRUCTURE ENGINEER</font>
+<font color='#ff7d00'>LEITER DER INFRASTRUKTURTECHNIK</font>
 Jordan Orelli
 
-<font color='#ff7d00'>INFRASTRUCTURE ENGINEERS</font>
+<font color='#ff7d00'>INFRASTRUKTURTECHNIKER</font>
 Dan Fallon
 Lena Guerrero
 Chase McClure
 Ryan McGill
 Alex Swan
 
-<font color='#ff7d00'>GAMEPLAY ENGINEERING</font>
+<font color='#ff7d00'>GAMEPLAY-ENTWICKLUNG</font>
 Mike Zuba
 
-<font color='#ff7d00'>ADDITIONAL&nbsp;&nbsp;ART</font>
+<font color='#ff7d00'>ZUSÄTZLICHE KUNST</font>
 Steff Egan
 Nolan J. Downs
 Erik Voigt
@@ -103,94 +103,94 @@ Hector M Padilla
 Hero Paul&nbsp;&nbsp;See
 Yoshi Sakaguchi
 
-<font color='#ff7d00'>ADDITIONAL&nbsp;&nbsp;SOUND DESIGN</font>
+<font color='#ff7d00'>ZUSÄTZLICHES SOUNDDESIGN</font>
 Avery Makel
 Brendan Monte
 
-<font color='#ff7d00'>ADDITIONAL&nbsp;&nbsp;GAMEPLAY ENGINEERING</font>
+<font color='#ff7d00'>ZUSÄTZLICHE GAMEPLAY-ENTWICKLUNG</font>
 Farhan Noormohammed
 Pascal&nbsp;&nbsp;Pochol
 Michael&nbsp;&nbsp;Siciliano
 Isaac Sweet
 
-<font color='#ff7d00'>SCENARIO DESIGNERS</font>
+<font color='#ff7d00'>SZENARIO-DESIGNER</font>
 Clara Hanford
 CJ Tuor
 Ryan DiGiorgi
 Chase McClure
 
-<font color='#ff7d00'>SCENARIO ENGINEERS</font>
+<font color='#ff7d00'>SZENARIO-INGENIEURE</font>
 Michael&nbsp;&nbsp;Bridgman
 Benjamin Miles
 Lena Guerrero
 Ryan McGill
 
-<font color='#ff7d00'>THEME SONG</font>
+<font color='#ff7d00'>TITELMELODIE</font>
 Brian Chard - Music
 Ryan DiGiorgi - Lyrics
 Audrey Karrasch - Vocals
 Michael&nbsp;&nbsp;Finney - Vocals
 
-<font color='#ff7d00'>CULTURAL&nbsp;&nbsp;CONSULTANTS</font>
+<font color='#ff7d00'>KULTURELLER BERATER</font>
 James Mendez Hodes
 Dominique Dickey
 
-<font color='#ff7d00'>QA MANAGER</font>
+<font color='#ff7d00'>MANAGER DER QUALITÄTSSICHERUNG</font>
 Steve Pakal
 
-<font color='#ff7d00'>QA</font>
+<font color='#ff7d00'>QUALITÄTSSICHERUNG</font>
 Allison Flom
 Dutch Freese
 Jack Guffey
 Bennett Hofer
 Alex Lueck
 
-<font color='#ff7d00'>USER RESEARCH</font>
+<font color='#ff7d00'>BENUTZERFORSCHUNG</font>
 Allison Flom
 Kevin Vekony
 
-<font color='#ff7d00'>SUBMISSION</font>
+<font color='#ff7d00'>EINREICHUNG</font>
 Luke Cody - Manager
 Laura La Vito
 Alex Weick
 
-<font color='#ff7d00'>CEO</font>
+<font color='#ff7d00'>GESCHÄFTSFÜHRER</font>
 Mike Bilder
 
-<font color='#ff7d00'>CCO</font>
+<font color='#ff7d00'>INHALTLICHER DIREKTOR</font>
 Allard Laban
 
-<font color='#ff7d00'>CTO</font>
+<font color='#ff7d00'>TECHNISCHER DIREKTOR</font>
 Evan Jacover
 
-<font color='#ff7d00'>VP OF AUDIO AND EDITORIAL</font>
+<font color='#ff7d00'>VIZEPRÄSIDENT FÜR AUDIO UND BEARBEITUNG</font>
 Andy Poland
 
-<font color='#ff7d00'>DIRECTOR OF PRODUCTION</font>
+<font color='#ff7d00'>LEITER DER PRODUKTION</font>
 Mike Zuba
 
-<font color='#ff7d00'>STUDIO ART DIRECTOR</font>
+<font color='#ff7d00'>KUNSTLEITER DES STUDIOS</font>
 David Innis
 
-<font color='#ff7d00'>STUDIO EDITORIAL&nbsp;&nbsp;DIRECTOR</font>
+<font color='#ff7d00'>REDAKTIONSLEITER DES STUDIOS</font>
 Arnie Niekamp
 
-<font color='#ff7d00'>MARKETING DIRECTOR</font>
+<font color='#ff7d00'>MARKETING-DIREKTOR</font>
 Brooke Hofer
 
-<font color='#ff7d00'>MARKETING MANAGER</font>
+<font color='#ff7d00'>MARKETINGLEITER</font>
 Belia Portillo
 
-<font color='#ff7d00'>HR & OFFICE MANAGER</font>
+<font color='#ff7d00'>PERSONAL- UND BÜROLEITER</font>
 Rob Alletto
 
-<font color='#ff7d00'>LEGAL&nbsp;&nbsp;COUNSEL</font>
+<font color='#ff7d00'>RECHTSBEISTAND</font>
 Kurt Hirsch
 
-<font color='#ff7d00'>CONTROLLER</font>
+<font color='#ff7d00'>RECHNUNGSPRÜFER</font>
 Anna Wodynski
 
-<font color='#ff7d00'>SPECIAL&nbsp;&nbsp;THANKS</font>
+<font color='#ff7d00'>BESONDERER DANK AN</font>
 Shumaila Ahmad
 Warren Arnold
 Ashley DiGiorgi
@@ -206,7 +206,7 @@ Stad St. Fleur
 Melissa Stone
 Mark Turowetz
 
-<font color='#ff7d00'>LI’L&nbsp;&nbsp;DEVILS</font>
+<font color='#ff7d00'>KLEINE TEUFELCHEN</font>
 Elizabeth Barth
 John Barth
 William Barth
@@ -229,5 +229,5 @@ Michael&nbsp;&nbsp;Swan
 Xander Swan
 Emmett Wissmiller
 
-<font color='#ff7d00'>FOUNDER OF JACKBOX GAMES</font>
+<font color='#ff7d00'>GRÜNDER VON JACKBOX GAMES</font>
 Harry Gottlieb
