--- a/games/WorldChampions/Credits.html
+++ b/games/WorldChampions/Credits.html
@@ -19,37 +19,37 @@ TheDarkSid3r
 Erizzle
 
 
-<font color='#ffffff'>DIRECTOR</font>
+<font color='#ffffff'>LEITUNG</font>
 Spencer Ham
 
-<font color='#ffffff'>PRODUCER</font>
+<font color='#ffffff'>PRODUZENT</font>
 Alex Weick
 
-<font color='#ffffff'>LEAD EDITORIAL</font>
+<font color='#ffffff'>LEITENDER REDAKTEUR</font>
 Spencer Ham
 
-<font color='#ffffff'>LEAD GAMEPLAY ENGINEER</font>
+<font color='#ffffff'>LEITENDER GAMEPLAY-INGENIEUR</font>
 Farhan Noormohammed
 
-<font color='#ffffff'>LEAD ARTIST</font>
+<font color='#ffffff'>LEITENDER KÜNSTLER</font>
 Hector M Padilla
 
-<font color='#ffffff'>AUDIO LEAD</font>
+<font color='#ffffff'>AUDIO-LEITUNG</font>
 Avery Makel
 
-<font color='#ffffff'>MUSIC</font>
+<font color='#ffffff'>MUSIK</font>
 Andy Poland
 
-<font color='#ffffff'>LEAD JACKBOX.TV ENGINEER</font>
+<font color='#ffffff'>LEITENDER JACKBOX.TV INGENIEUR</font>
 Alex Swan
 
-<font color='#ffffff'>QA LEAD</font>
+<font color='#ffffff'>LEITUNG DER QUALITÄTSSICHERUNG</font>
 Allison Flom
 
-<font color='#ffffff'>HOST</font>
+<font color='#ffffff'>MODERATOR</font>
 Tom Gottlieb
 
-<font color='#ffffff'>WRITERS</font>
+<font color='#ffffff'>AUTOREN</font>
 Liz Anderson
 Alex Blechman
 Brooke Breit
@@ -57,100 +57,100 @@ Tom Gottlieb
 Claire McFadden
 CJ Tuor
 
-<font color='#ffffff'>ASSISTANT EDITOR</font>
+<font color='#ffffff'>ASSISTENZ-REDAKTEUR</font>
 Clara Hanford
 
-<font color='#ffffff'>ORIGINAL CONCEPT</font>
+<font color='#ffffff'>URSPRÜNGLICHES KONZEPT</font>
 Spencer Ham
 Ben Jacobs
 
-<font color='#ffffff'>LEAD INFRASTRUCTURE ENGINEER</font>
+<font color='#ffffff'>LEITER DER INFRASTRUKTURTECHNIK</font>
 Jordan Orelli
 
-<font color='#ffffff'>INFRASTRUCTURE ENGINEERS</font>
+<font color='#ffffff'>INFRASTRUKTURTECHNIKER</font>
 Dan Fallon
 Lena Guerrero
 Chase McClure
 Ryan McGill
 Alex Swan
 
-<font color='#ffffff'>ADDITIONAL ART</font>
+<font color='#ffffff'>ZUSÄTZLICHE KUNST</font>
 Hero Paul See
 Patrick deBardelaben
 Nolan J. Downs
 Kyle Fleischer
 David Innis
 
-<font color='#ffffff'>ADDITIONAL SOUND DESIGN</font>
+<font color='#ffffff'>ZUSÄTZLICHES SOUNDDESIGN</font>
 Brendan Monte
 
-<font color='#ffffff'>ADDITIONAL GAMEPLAY ENGINEERING</font>
+<font color='#ffffff'>ZUSÄTZLICHE GAMEPLAY-ENTWICKLUNG</font>
 Ben Jacobs
 Pascal Pochol
 Michael Siciliano
 Isaac Sweet
 Mike Zuba
 
-<font color='#ffffff'>CREDITS SONG</font>
+<font color='#ffffff'>CREDITS-SONG</font>
 Andy Poland - Music & Lyrics
 Mike Finney - Vocals
 
-<font color='#ffffff'>QA MANAGER</font>
+<font color='#ffffff'>MANAGER DER QUALITÄTSSICHERUNG</font>
 Steve Pakal
 
-<font color='#ffffff'>QA</font>
+<font color='#ffffff'>QUALITÄTSSICHERUNG</font>
 Kevin Vekony
 Dutch Freese
 Jack Guffey
 Bennett Hofer
 Alex Lueck
 
-<font color='#ffffff'>USER RESEARCH</font>
+<font color='#ffffff'>BENUTZERFORSCHUNG</font>
 Allison Flom
 Kevin Vekony
 
-<font color='#ffffff'>SUBMISSION</font>
+<font color='#ffffff'>EINREICHUNG</font>
 Luke Cody - Manager
 Laura La Vito
 Alex Weick
 
-<font color='#ffffff'>CEO</font>
+<font color='#ffffff'>GESCHÄFTSFÜHRER</font>
 Mike Bilder
 
-<font color='#ffffff'>CCO</font>
+<font color='#ffffff'>INHALTLICHER DIREKTOR</font>
 Allard Laban
 
-<font color='#ffffff'>CTO</font>
+<font color='#ffffff'>TECHNISCHER DIREKTOR</font>
 Evan Jacover
 
-<font color='#ffffff'>VP OF AUDIO AND EDITORIAL</font>
+<font color='#ffffff'>VIZEPRÄSIDENT FÜR AUDIO UND BEARBEITUNG</font>
 Andy Poland
 
-<font color='#ffffff'>DIRECTOR OF PRODUCTION</font>
+<font color='#ffffff'>DIREKTOR DER PRODUKTION</font>
 Mike Zuba
 
-<font color='#ffffff'>STUDIO ART DIRECTOR</font>
+<font color='#ffffff'>KUNSTLEITER DES STUDIOS</font>
 David Innis
 
-<font color='#ffffff'>STUDIO EDITORIAL DIRECTOR</font>
+<font color='#ffffff'>REDAKTIONSLEITER DES STUDIOS</font>
 Arnie Niekamp
 
-<font color='#ffffff'>MARKETING DIRECTOR</font>
+<font color='#ffffff'>DIREKTOR DES MARKETING</font>
 Brooke Hofer
 
-<font color='#ffffff'>MARKETING MANAGER</font>
+<font color='#ffffff'>MARKETINGLEITER</font>
 Belia Portillo
 
-<font color='#ffffff'>HR & OFFICE MANAGER</font>
+<font color='#ffffff'>PERSONAL- UND BÜROLEITER</font>
 Rob Alletto
 
-<font color='#ffffff'>LEGAL COUNSEL</font>
+<font color='#ffffff'>RECHTSBEISTAND</font>
 Kurt Hirsch
 
-<font color='#ffffff'>CONTROLLER</font>
+<font color='#ffffff'>RECHNUNGSPRÜFER</font>
 Anna Wodynski
 
-<font color='#ffffff'>SPECIAL THANKS</font>
+<font color='#ffffff'>BESONDERER DANK AN</font>
 Shumaila Ahmad
 Warren Arnold
 Brian Chard
@@ -167,5 +167,5 @@ Melissa Stone
 Mark Turowetz
 Owen Watson
 
-<font color='#ffffff'>FOUNDER OF JACKBOX GAMES</font>
+<font color='#ffffff'>GRÜNDER VON JACKBOX GAMES</font>
 Harry Gottlieb
