--- a/games/JackboxTalks/Credits.html
+++ b/games/JackboxTalks/Credits.html
@@ -17,139 +17,139 @@
 <font size='22'>ERIZZLE</font>
 
 
-<font color='#16DAB7' size='16'>DIRECTOR</font>
+<font color='#16DAB7' size='16'>LEITUNG</font>
 <font size='22'>ARNIE NIEKAMP</font>
 
-<font color='#16DAB7' size='16'>PRODUCER</font>
+<font color='#16DAB7' size='16'>PRODUZENT</font>
 <font size='22'>LAURA LA VITO</font>
 
-<font color='#16DAB7' size='16'>LEAD GAMEPLAY ENGINEER</font>
+<font color='#16DAB7' size='16'>LEITENDER GAMEPLAY-INGENIEUR</font>
 <font size='22'>MICHAEL SICILIANO</font>
 
-<font color='#16DAB7' size='16'>LEAD EDITORIAL</font>
+<font color='#16DAB7' size='16'>LEITENDER REDAKTEUR</font>
 <font size='22'>BROOKE BREIT</font>
 
-<font color='#16DAB7' size='16'>LEAD ARTIST</font>
+<font color='#16DAB7' size='16'>LEITENDER KÜNSTLER</font>
 <font size='22'>BRUNO RODRÍGUEZ</font>
 
-<font color='#16DAB7' size='16'>AUDIO LEAD</font>
+<font color='#16DAB7' size='16'>AUDIO-LEITUNG</font>
 <font size='22'>BRIAN CHARD</font>
 
-<font color='#16DAB7' size='16'>LEAD JACKBOX.TV ENGINEER</font>
+<font color='#16DAB7' size='16'>LEITENDER JACKBOX.TV INGENIEUR</font>
 <font size='22'>ALEX SWAN</font>
 
-<font color='#16DAB7' size='16'>QA LEAD</font>
+<font color='#16DAB7' size='16'>LEITUNG DER QUALITÄTSSICHERUNG</font>
 <font size='22'>ALEX LUECK</font>
 
-<font color='#16DAB7' size='16'>HOST</font>
+<font color='#16DAB7' size='16'>MODERATORIN</font>
 <font size='22'>KAYLA PULLEY</font>
 
-<font color='#16DAB7' size='16'>WRITERS</font>
+<font color='#16DAB7' size='16'>AUTOREN</font>
 <font size='22'>LIZ ANDERSON</font>
 <font size='22'>TOM GOTTLIEB</font>
 <font size='22'>CLAIRE MCFADDEN</font>
 <font size='22'>CJ TUOR</font>
 <font size='22'>ALEX BLECHMAN</font>
 
-<font color='#16DAB7' size='16'>CONTRIBUTING WRITERS</font>
+<font color='#16DAB7' size='16'>ZUSÄTZLICHE AUTOREN</font>
 <font size='22'>MICHAEL SICILIANO</font>
 <font size='22'>TIM SNIFFEN</font>
 
-<font color='#16DAB7' size='16'>ASSISTANT EDITOR</font>
+<font color='#16DAB7' size='16'>ASSISTENZ-REDAKTEUR</font>
 <font size='22'>CLARA HANFORD</font>
 
-<font color='#16DAB7' size='16'>ORIGINAL CONCEPT</font>
+<font color='#16DAB7' size='16'>URSPRÜNGLICHES KONZEPT</font>
 <font size='22'>MICHAEL SICILIANO</font>
 
-<font color='#16DAB7' size='16'>LEAD INFRASTRUCTURE ENGINEER</font>
+<font color='#16DAB7' size='16'>LEITER DER INFRASTRUKTURTECHNIK</font>
 <font size='22'>JORDAN ORELLI</font>
 
-<font color='#16DAB7' size='16'>INFRASTRUCTURE ENGINEERS</font>
+<font color='#16DAB7' size='16'>INFRASTRUKTURTECHNIKER</font>
 <font size='22'>DAN FALLON</font>
 <font size='22'>LENA GUERRERO</font>
 <font size='22'>CHASE MCCLURE</font>
 <font size='22'>RYAN MCGILL</font>
 <font size='22'>ALEX SWAN</font>
 
-<font color='#16DAB7' size='16'>ADDITIONAL ART</font>
+<font color='#16DAB7' size='16'>ZUSÄTZLICHE KUNST</font>
 <font size='22'>DAVID INNIS</font>
 <font size='22'>YOSHI SAKAGUCHI</font>
 
-<font color='#16DAB7' size='16'>ADDITIONAL SOUND DESIGN</font>
+<font color='#16DAB7' size='16'>ZUSÄTZLICHES SOUNDDESIGN</font>
 <font size='22'>AVERY MAKEL</font>
 <font size='22'>BRENDAN MONTE</font>
 <font size='22'>MICHAEL SICILIANO</font>
 
-<font color='#16DAB7' size='16'>ADDITIONAL GAMEPLAY ENGINEERING</font>
+<font color='#16DAB7' size='16'>ZUSÄTZLICHE GAMEPLAY-ENTWICKLUNG</font>
 <font size='22'>BEN JACOBS</font>
 <font size='22'>FARHAN NOORMOHAMMED</font>
 <font size='22'>PASCAL POCHOL</font>
 <font size='22'>ISAAC SWEET</font>
 <font size='22'>MIKE ZUBA</font>
 
-<font color='#16DAB7' size='16'>QA MANAGER</font>
+<font color='#16DAB7' size='16'>MANAGER DER QUALITÄTSSICHERUNG</font>
 <font size='22'>STEVE PAKAL</font>
 
-<font color='#16DAB7' size='16'>QA</font>
+<font color='#16DAB7' size='16'>QUALITÄTSSICHERUNG</font>
 <font size='22'>ALLISON FLOM</font>
 <font size='22'>KEVIN VEKONY</font>
 <font size='22'>DUTCH FREESE</font>
 <font size='22'>JACK GUFFEY</font>
 <font size='22'>BENNETT HOFER</font>
 
-<font color='#16DAB7' size='16'>USER RESEARCH</font>
+<font color='#16DAB7' size='16'>BENUTZERFORSCHUNG</font>
 <font size='22'>ALLISON FLOM</font>
 <font size='22'>KEVIN VEKONY</font>
 
-<font color='#16DAB7' size='16'>SUBMISSION</font>
+<font color='#16DAB7' size='16'>EINREICHUNG</font>
 <font size='22'>LUKE CODY - MANAGER</font>
 <font size='22'>LAURA LA VITO</font>
 <font size='22'>ALEX WEICK</font>
 
-<font color='#16DAB7' size='16'>CULTURAL CONSULTANTS</font>
+<font color='#16DAB7' size='16'>KULTURELLER BERATER</font>
 <font size='22'>JAMES MENDEZ HODES</font>
 <font size='22'>DOMINIQUE DICKEY</font>
 
-<font color='#16DAB7' size='16'>PROOFREADING</font>
+<font color='#16DAB7' size='16'>KORREKTURLESER</font>
 <font size='22'>ELAINE FRIEDBERG</font>
 
-<font color='#16DAB7' size='16'>CEO</font>
+<font color='#16DAB7' size='16'>GESCHÄFTSFÜHRER</font>
 <font size='22'>MIKE BILDER</font>
 
-<font color='#16DAB7' size='16'>CCO</font>
+<font color='#16DAB7' size='16'>INHALTLICHER DIREKTOR</font>
 <font size='22'>ALLARD LABAN</font>
 
-<font color='#16DAB7' size='16'>CTO</font>
+<font color='#16DAB7' size='16'>TECHNISCHER DIREKTOR</font>
 <font size='22'>EVAN JACOVER</font>
 
-<font color='#16DAB7' size='16'>VP OF AUDIO AND EDITORIAL</font>
+<font color='#16DAB7' size='16'>VIZEPRÄSIDENT FÜR AUDIO UND BEARBEITUNG</font>
 <font size='22'>ANDY POLAND</font>
 
-<font color='#16DAB7' size='16'>DIRECTOR OF PRODUCTION</font>
+<font color='#16DAB7' size='16'>DIREKTOR DER PRODUKTION</font>
 <font size='22'>MIKE ZUBA</font>
 
-<font color='#16DAB7' size='16'>STUDIO ART DIRECTOR</font>
+<font color='#16DAB7' size='16'>KUNSTLEITER DES STUDIOS</font>
 <font size='22'>DAVID INNIS</font>
 
-<font color='#16DAB7' size='16'>STUDIO EDITORIAL DIRECTOR</font>
+<font color='#16DAB7' size='16'>REDAKTIONSLEITER DES STUDIOS</font>
 <font size='22'>ARNIE NIEKAMP</font>
 
-<font color='#16DAB7' size='16'>MARKETING DIRECTOR</font>
+<font color='#16DAB7' size='16'>DIREKTOR FÜR MARKETING</font>
 <font size='22'>BROOKE HOFER</font>
 
-<font color='#16DAB7' size='16'>MARKETING MANAGER</font>
+<font color='#16DAB7' size='16'>MARKETINGLEITER</font>
 <font size='22'>BELIA PORTILLO</font>
 
-<font color='#16DAB7' size='16'>HR & OFFICE MANAGER</font>
+<font color='#16DAB7' size='16'>PERSONAL- UND BÜROLEITER</font>
 <font size='22'>ROB ALLETTO</font>
 
-<font color='#16DAB7' size='16'>LEGAL COUNSEL</font>
+<font color='#16DAB7' size='16'>RECHTSBEISTAND</font>
 <font size='22'>KURT HIRSCH</font>
 
-<font color='#16DAB7' size='16'>CONTROLLER</font>
+<font color='#16DAB7' size='16'>RECHNUNGSPRÜFER</font>
 <font size='22'>ANNA WODYNSKI</font>
 
-<font color='#16DAB7' size='16'>SPECIAL THANKS</font>
+<font color='#16DAB7' size='16'>BESONDERER DANK AN</font>
 <font size='22'>SHUMAILA AHMAD</font>
 <font size='22'>WARREN ARNOLD</font>
 <font size='22'>RYAN DIGIORGI</font>
@@ -165,5 +165,5 @@
 <font size='22'>MARK TUROWETZ</font>
 <font size='22'>OWEN WATSON</font>
 
-<font color='#16DAB7' size='16'>FOUNDER OF JACKBOX GAMES</font>
+<font color='#16DAB7' size='16'>GRÜNDER VON JACKBOX GAMES</font>
 <font size='22'>HARRY GOTTLIEB</font>
