Anpassung Credits JBPP7

--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -22,8 +22,9 @@ Vanessa Strauch - Vocals
 Maximilian Frank - Lyrics
 Erizzle - Mix
 
-<font color='#ff7d00'>ER SCHRIEB DAS DIALOGBUCH</font>
-Erizzle
+<font color='#ff7d00'>SIE SCHRIEBEN DAS DIALOGBUCH</font>
+Paul Hufnagel
+Maximilian Frank
 
 <font color='#ff7d00'>SO VIELE GRAFIKEN!</font>
 Maximilian Frank
