--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -29,8 +29,9 @@ Maximilian Frank
 <font color='#ff7d00'>SO VIELE GRAFIKEN!</font>
 Maximilian Frank
 
-<font color='#ff7d00'>ER ERSTELLTE DIE ANIMATIONEN</font>
+<font color='#ff7d00'>SIE ERSTELLTEN DIE ANIMATIONEN</font>
 Maximilian Frank
+FixedFun
 
 <font color='#ff7d00'>OH! TECHNISCHE UNTERSTÜTZUNG</font>
 SpooX
