Blather 'Round-Credits sind jetzt blather-roundiger

--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -66,7 +66,7 @@ Isaac Sweet
 <font color='#ff7d00'>OH, LEITENDER KÜNSTLER!</font>
 David Innis
 
-<font color='#ff7d00'>ER LEITET DAS AUDIO</font>
+<font color='#ff7d00'>AUDIO-LEITUNG, WOW!</font>
 Andy Poland
 
 <font color='#ff7d00'>SIE MACHEN DIE MUSIK</font>
@@ -149,7 +149,7 @@ Mike Bilder
 <font color='#ff7d00'>ER IST DER INHALTLICHE DIREKTOR</font>
 Allard Laban
 
-<font color='#ff7d00'>ER IST DER TECHNISCHE DIREKTOR</font>
+<font color='#ff7d00'>TECHNISCHER DIREKTOR, WOW!</font>
 Evan Jacover
 
 <font color='#ff7d00'>ER IST DER VIZEPRÄSIDENT FÜR AUDIO UND BEARBEITUNG</font>
@@ -161,7 +161,7 @@ Mike Zuba
 <font color='#ff7d00'>ER IST DER KUNSTLEITER DES STUDIOS</font>
 David Innis
 
-<font color='#ff7d00'>ER IST DER REDAKTIONSLEITER DES STUDIOS</font>
+<font color='#ff7d00'>WOW, REDAKTIONSLEITER DES STUDIOS!</font>
 Arnie Niekamp
 
 <font color='#ff7d00'>SIE IST DIE DIREKTORIN DES MARKETING</font>
