Champ'd Up: QA (und ganz heimliche Credits-Änderungen)
Teil 1 der QA, vielleicht mach ich auch noch das restliche irgendwann

--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -6,7 +6,7 @@ Erizzle
 <font color='#ff7d00'>SIE ÜBERSETZTEN DAS SPIEL</font>
 Maximilian Frank
 Erizzle
-BlackSheep
+Lucas Böttger
 Paul Hufnagel
 Chatan
 ItsNiceCraft
