--- a/games/JackboxTalks/Credits.html
+++ b/games/JackboxTalks/Credits.html
@@ -21,7 +21,7 @@
 <font size='22'>MAXIMILIAN FRANK</font>
 
 <font color='#16DAB7' size='16'>QUALITÄTSSICHERUNG</font>
-<font size='22'>BLACKSHEEP</font>
+<font size='22'>LUCAS BÖTTGER</font>
 
 <font color='#16DAB7' size='16'>VORSCHAUVIDEO</font>
 <font size='22'>JUST A YOSHI</font>
