--- a/games/WorldChampions/Credits.html
+++ b/games/WorldChampions/Credits.html
@@ -25,6 +25,9 @@ Erizzle
 <font color='#ffffff'>GRAFIKEN</font>
 Erizzle
 
+<font color='#ffffff'>QUALITÄTSSICHERUNG</font>
+Lucas Böttger
+
 <font color='#ffffff'>VORSCHAUVIDEO</font>
 Just a Yoshi
 
