--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -18,7 +18,7 @@ Susanna Cuda
 Erizzle
 
 <font color='#ff7d00'>WOW! DEUTSCHER CREDITS-SONG!</font>
-Vanessa Strauch - Vocals
+Stravana - Vocals
 Maximilian Frank - Lyrics
 Erizzle - Mix
 
