--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -37,7 +37,7 @@ FixedFun
 SpooX
 
 <font color='#ff7d00'>SIE MACHTEN DIE WEBSEITE</font>
-TheDarkSid3r
+UnrulyJuli3
 Erizzle
 
 <font color='#ff7d00'>BESONDERER DANK AN</font>
