--- a/games/Everyday/Credits.html
+++ b/games/Everyday/Credits.html
@@ -34,7 +34,7 @@ Maximilian Frank
 Just a Yoshi
 
 <font color='#ff7d00'>WEB-ENTWICKLUNG</font>
-TheDarkSid3r
+UnrulyJuli3
 Erizzle
 
 <font color='#ff7d00'>BESONDERER DANK AN</font>
