--- a/games/WorldChampions/Credits.html
+++ b/games/WorldChampions/Credits.html
@@ -32,7 +32,7 @@ Lucas Böttger
 Just a Yoshi
 
 <font color='#ffffff'>WEB-ENTWICKLUNG</font>
-TheDarkSid3r
+UnrulyJuli3
 Erizzle
 
 <font color='#ffffff'>BESONDERER DANK AN</font>
