--- a/games/JackboxTalks/Credits.html
+++ b/games/JackboxTalks/Credits.html
@@ -27,7 +27,7 @@
 <font size='22'>JUST A YOSHI</font>
 
 <font color='#16DAB7' size='16'>WEB-ENTWICKLUNG</font>
-<font size='22'>THEDARKSID3R</font>
+<font size='22'>UNRULYJULI3</font>
 <font size='22'>ERIZZLE</font>
 
 <font color='#16DAB7' size='16'>BESONDERER DANK AN</font>
