Credits Patreon/KoFi

--- a/games/BlankyBlank/Credits.html
+++ b/games/BlankyBlank/Credits.html
@@ -43,7 +43,7 @@ Erizzle
 <font color='#ff7d00'>BESONDERER DANK AN</font>
 Akira896
 Jackbox Games
-Unsere Patreon-Unterstützer
+Unsere Ko-fi-Unterstützer
 
 jackboxpatch.de
 
