--- a/games/JackboxTalks/Credits.html
+++ b/games/JackboxTalks/Credits.html
@@ -33,7 +33,7 @@
 <font color='#16DAB7' size='16'>BESONDERER DANK AN</font>
 <font size='22'>AKIRA896</font>
 <font size='22'>JACKBOX GAMES</font>
-<font size='22'>UNSERE PATREON-UNTERSTÜTZER</font>
+<font size='22'>UNSERE KO-FI-UNTERSTÜTZER</font>
 
 <font size='22'>JACKBOXPATCH.DE</font>
 
