--- a/games/WorldChampions/Credits.html
+++ b/games/WorldChampions/Credits.html
@@ -38,7 +38,7 @@ Erizzle
 <font color='#ffffff'>BESONDERER DANK AN</font>
 Akira896
 Jackbox Games
-Unsere Patreon-Unterstützer
+Unsere Ko-fi-Unterstützer
 
 jackboxpatch.de
 
